--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "bootstrap": "^4.5.0",
         "js-cookie": "^2.2.1",
         "react": "^16.13.1",
+        "react-alert": "^7.0.2",
+        "react-alert-template-basic": "^1.0.0",
         "react-bootstrap": "^1.1.1",
         "react-dom": "^16.13.1",
         "react-router": "^5.2.0",
